--- a/calamity.cabal
+++ b/calamity.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.18
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 486875ebdeafb710d8f23e4c4e501e85fa1ba7a0fbd9b4730097390055cfb514
+-- hash: 4b9933f2e147ec50af668c14436116f39b3b15111c36ea3cfcddb816a04570d3
 
 name:           calamity
 version:        0.1.5.1
@@ -137,6 +137,7 @@ library
     , polysemy >=1.3 && <2
     , polysemy-plugin >=0.2 && <0.3
     , reflection >=2.1 && <3
+    , safe-exceptions >=0.1 && <2
     , scientific >=0.3 && <0.4
     , stm >=2.5 && <3
     , stm-chans >=3.0 && <4
