--- a/package.yaml
+++ b/package.yaml
@@ -58,7 +58,8 @@ dependencies:
 - reflection >= 2.1 && < 3
 - polysemy >= 1.3 && < 2
 - polysemy-plugin >= 0.2 && < 0.3
-- di-polysemy >= 0.1.1 && < 0.2
+- di-polysemy >= 0.1.2 && < 0.2
+- di-core >= 1.0.4 && < 2
 - df1 >= 0.3 && < 0.4
 - generic-override >= 0.0.0.0 && < 0.0.1
 - generic-override-aeson >= 0.0.0.0 && < 0.0.1
