--- a/stack.yaml
+++ b/stack.yaml
@@ -51,8 +51,12 @@ extra-deps:
   - polysemy-plugin-0.2.5.0@sha256:67e30be568a141b852aace1a60e180cb5060fbb2835365a81a3ea779536d6d35,2952
   - generic-lens-core-2.0.0.0@sha256:40b063c4a1399b3cdb19f2df1fae5a1a82f3313015c7c3e47fc23b8ef1b3e443,2913
   - ghc-tcplugins-extra-0.3.2@sha256:1bbfd4449c3669a31618ea0ebc5d00d980a53988daad3b6218bab5c8cdff268d,1687
-  - di-polysemy-0.1.1.2
+  - di-polysemy-0.1.2.0
   - wreq-patchable-1.0.0.0
+  - github: nitros12/di
+    commit: fe2a57ed064808d567bd2e3f869ed3cbcef0c942
+    subdirs:
+      - di-core
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
