--- a/calamity.cabal
+++ b/calamity.cabal
@@ -4,10 +4,10 @@ cabal-version: 1.18
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 0b61f91df75a0a06757763a207ce83d2a9597c059dadd7798a155ace29013568
+-- hash: 937e0f733e228c4802d264ee8604fd7c240de956883cffd7aa7902a54c0be731
 
 name:           calamity
-version:        0.1.7.0
+version:        0.1.7.1
 synopsis:       A library for writing discord bots
 description:    Please see the README on GitHub at <https://github.com/nitros12/calamity#readme>
 category:       Network, Web
@@ -60,6 +60,7 @@ library
       Calamity.HTTP.Webhook
       Calamity.Internal.AesonThings
       Calamity.Internal.BoundedStore
+      Calamity.Internal.GenericCurry
       Calamity.Internal.SnowflakeMap
       Calamity.Internal.Updateable
       Calamity.Internal.Utils
