Get waitUntil working
Squashed commit of the following:

commit 3a04eb63548a56b31c00996ad37fcdecd4192e5d
Author: Ben Simms <ben@bensimms.moe>
Date:   Fri May 15 06:14:33 2020 +0100

    I'm not sure now

commit b4118d2534a9d4c997e69f44ae90d90c55ceabf9
Author: Ben Simms <ben@bensimms.moe>
Date:   Fri May 15 06:03:51 2020 +0100

    Try that

commit a6be4c2b98cd424748015f4b5e6f40e3506653e1
Author: Ben Simms <ben@bensimms.moe>
Date:   Fri May 15 05:49:17 2020 +0100

    Well that seems to compile

commit f10fc83dcc1a6133b477711311e75ffc06dc00aa
Author: Ben Simms <ben@bensimms.moe>
Date:   Fri May 15 03:13:31 2020 +0100

    Remove fail effect from runBotIO

commit cbde78c983afa2dfb1f93cb98d1e879c7210c8e8
Author: Ben Simms <ben@bensimms.moe>
Date:   Fri May 15 02:35:43 2020 +0100

    Oops

commit 95f8fcbdfd0cdeda7f2f11160040be2b3e901246
Author: Ben Simms <ben@bensimms.moe>
Date:   Fri May 15 02:28:18 2020 +0100

    Use PutStrLn instead

commit e2f5b35b05bb7d6fee79725fd4cf8e355da434ea
Author: Ben Simms <ben@bensimms.moe>
Date:   Fri May 15 02:22:26 2020 +0100

    Send shard stop in finishUp, not stopBot

commit 746d4372a4120a51a7fc25185034225bdd325bc1
Author: Ben Simms <ben@bensimms.moe>
Date:   Fri May 15 02:14:44 2020 +0100

    Keep track of initial effects

commit 6c8bba14f81ce470ff891814bb0e9ff204d97666
Author: Ben Simms <ben@bensimms.moe>
Date:   Fri May 15 02:00:00 2020 +0100

    Revert "Try this"

    This reverts commit 9eb2cf9c4ed60e10a8376912d51826d66f351ab3.

commit 9eb2cf9c4ed60e10a8376912d51826d66f351ab3
Author: Ben Simms <ben@bensimms.moe>
Date:   Fri May 15 01:52:46 2020 +0100

    Try this

commit 1a1d5c98855ecab501348e78d1c71b340e6b665d
Author: Ben Simms <ben@bensimms.moe>
Date:   Fri May 15 01:31:59 2020 +0100

    Attach type mismatch info to fromJust errors

commit 6267c42146183695266a834df4efc682d23910a5
Author: Ben Simms <ben@bensimms.moe>
Date:   Fri May 15 01:15:17 2020 +0100

    Log exceptions

commit 31ca2b45954fd6f795c5033a682eee209711889

--- a/calamity.cabal
+++ b/calamity.cabal
@@ -4,10 +4,10 @@ cabal-version: 1.18
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 937e0f733e228c4802d264ee8604fd7c240de956883cffd7aa7902a54c0be731
+-- hash: 1217175ab8de3749a8fdae8f73f44a650fbb177f93f65f8c2d583dea7cffec7c
 
 name:           calamity
-version:        0.1.7.1
+version:        0.1.8.0
 synopsis:       A library for writing discord bots
 description:    Please see the README on GitHub at <https://github.com/nitros12/calamity#readme>
 category:       Network, Web
@@ -61,6 +61,7 @@ library
       Calamity.Internal.AesonThings
       Calamity.Internal.BoundedStore
       Calamity.Internal.GenericCurry
+      Calamity.Internal.RunIntoIO
       Calamity.Internal.SnowflakeMap
       Calamity.Internal.Updateable
       Calamity.Internal.Utils
