--- a/stack.yaml
+++ b/stack.yaml
@@ -53,6 +53,7 @@ extra-deps:
   - ghc-tcplugins-extra-0.3.2@sha256:1bbfd4449c3669a31618ea0ebc5d00d980a53988daad3b6218bab5c8cdff268d,1687
   - di-polysemy-0.1.3.1
   - wreq-patchable-1.0.0.0
+  - data-flags-0.0.3.4
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
