--- a/package.yaml
+++ b/package.yaml
@@ -68,6 +68,7 @@ dependencies:
 - safe-exceptions >= 0.1 && < 2
 - unagi-chan >= 0.4 && < 0.5
 - megaparsec >= 8 && < 9
+- data-flags >= 0.0.3 && < 0.1.0
 
 # executables:
 #   test-calamity-exe:
