--- a/package.yaml
+++ b/package.yaml
@@ -19,7 +19,7 @@ extra-source-files:
 extra-doc-files:
   - README.md
 
-synopsis:           "A library for writing discord bots"
+synopsis:           "A library for writing discord bots in haskell"
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
